--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,15 +111,20 @@ if(WIN32)
   #  WIN32 TRUE # Make it a GUI app instead of console app
   #)
 elseif(APPLE)
+  #set(APP_HELPER_FILES
+  #  ${CMAKE_CURRENT_SOURCE_DIR}/xxxxx/<helper tools>
+  #)
   set(APP_RESOURCE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/images/icon.icns
     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/sentry/build/macOS/crashpad_handler
   )
+  #set_source_files_properties(${APP_HELPER_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION "Helpers")
   set_source_files_properties(${APP_RESOURCE_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
   add_executable(${PROJECT_NAME} 
     ${SRC_DIR}/main.cpp 
     ${MAIN_SOURCE}
     #${APP_ICON_MACOSX}
+    #${APP_HELPER_FILES}
     ${APP_RESOURCE_FILES})
   set_target_properties(${PROJECT_NAME} PROPERTIES
     MACOSX_BUNDLE TRUE # Create macOS app bundle
