--- a/.github/workflows/build-cmake-macOS-Qt-5_15_2.yml
+++ b/.github/workflows/build-cmake-macOS-Qt-5_15_2.yml
@@ -76,7 +76,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_PREFIX_PATH=$RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib/cmake -G "CodeBlocks - Unix Makefiles" ${{ github.workspace }}
+          cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_PREFIX_PATH=$RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib/cmake ${{ github.workspace }}
       - name: Compile (Build) project
         run: |
           cd build
