--- a/.github/workflows/build-cmake-macOS-Qt-5_15_2.yml
+++ b/.github/workflows/build-cmake-macOS-Qt-5_15_2.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+      - name: Checkout submodules
+        uses: textbook/git-checkout-submodule-action@master
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
@@ -72,6 +74,17 @@ jobs:
         run: |
           brew install opencv
       
+      - name: build submodules in project - sentry-native
+        run: |
+          cd third_party/sentry-native
+          cmake -B build -S . \
+            -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+            -DSENTRY_BACKEND=crashpad \
+            -DSENTRY_INTEGRATION_QT=YES \
+            -DCMAKE_PREFIX_PATH=$RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib/cmake
+          cmake --build build --config RelWithDebInfo --parallel
+          cmake --install build --prefix install
+
       - name: CMake generate buildsystem
         run: |
           mkdir build
@@ -97,10 +110,7 @@ jobs:
             install_name_tool -id @executable_path/../Frameworks/libgcc_s.1.1.dylib install/debug/Swiftray.app/Contents/Frameworks/libgcc_s.1.1.dylib
             install_name_tool -change /usr/local/opt/gcc/lib/gcc/11/libgcc_s.1.1.dylib @executable_path/../Frameworks/libgcc_s.1.1.dylib install/debug/Swiftray.app/Contents/Frameworks/libgcc_s.1.dylib
             install_name_tool -add_rpath @executable_path/../Frameworks install/debug/Swiftray.app/Contents/MacOS/Swiftray
-      - name: Copy libsentry to bundle
-        run: |
-            cd build
-            cp ../third_party/sentry/build/macOS/libsentry.dylib install/debug/Swiftray.app/Contents/Frameworks/
+
       #- name: Print otool result
       #  run: |
       #      otool -l build/install/debug/Swiftray.app/Contents/MacOS/Swiftray
@@ -170,8 +180,8 @@ jobs:
             "Swiftray-Installer.dmg" \
             "Swiftray.app/"
 
-      - name: Create Github Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: build/install/debug/Swiftray-Installer.dmg
+      #- name: Create Github Release
+      #  uses: softprops/action-gh-release@v1
+      #  if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    files: build/install/debug/Swiftray-Installer.dmg
