--- a/.github/workflows/build-qmake-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-qmake-macos-Qt-5_15_2.yml
@@ -2,13 +2,15 @@ name: build-macos-installer
 on:
   push:
     tags:
-      - "q*.*.*"
+      - "v*.*.*"
 jobs:
   setup-macos-build-environment:
     runs-on: macos-10.15
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+      - name: Checkout submodules
+        uses: textbook/git-checkout-submodule-action@master
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
@@ -72,6 +74,17 @@ jobs:
         run: |
           brew install opencv
       
+      - name: build submodules in project - sentry-native
+        run: |
+          cd third_party/sentry-native
+          cmake -B build -S . \
+            -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+            -DSENTRY_BACKEND=crashpad \
+            -DSENTRY_INTEGRATION_QT=YES \
+            -DCMAKE_PREFIX_PATH=$RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib/cmake
+          cmake --build build --config RelWithDebInfo --parallel
+          cmake --install build --prefix install
+
       - name: QMake project
         run: |
           mkdir build
@@ -89,8 +102,6 @@ jobs:
           cd build
           $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -verbose=2
           tree .
-
-      # TODO: Copy crashpad_handler and sentry lib
 
       #- uses: actions/upload-artifact@v3
       #  with:
