--- a/.github/workflows/build-qmake-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-qmake-macos-Qt-5_15_2.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@master
+        run: git submodule update --init --recursive
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
