--- a/.github/workflows/build-qmake-macos-Qt-5_15_2.yml
+++ b/.github/workflows/build-qmake-macos-Qt-5_15_2.yml
@@ -1,4 +1,4 @@
-name: build-macos-installer
+name: qmake-build-macos-installer
 on:
   push:
     tags:
@@ -102,21 +102,27 @@ jobs:
           cd build
           $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -verbose=2
           tree .
-
-      #- uses: actions/upload-artifact@v3
-      #  with:
-      #    name: build
-      #    path: build/ # or path/to/artifact
-
-      - name: Select XCode version
+        
+      - name: Select XCode version (workaround for codesign fail)
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '12.4.0'
 
-      #- uses: actions/download-artifact@v3
-      #  with:
-      #    name: build
-      #- run: ls
+      - name: Setup Sentry CLI
+        uses: mathieu-bour/setup-sentry-cli@1.2.0
+        with:
+          version: latest # optional if 'latest'
+          token: ${{ SECRETS.SENTRY_TOKEN }} # from GitHub secrets
+          organization: flux3dp
+          project: swiftray
+      - name: Upload debug symbol to sentry
+        run: |
+          cd $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib
+          sentry-cli upload-dif -o flux3dp -p swiftray *.dSYM
+          cd ${{ github.workspace }}
+          cd build
+          dsymutil Swiftray.app/Contents/MacOS/Swiftray
+          sentry-cli upload-dif -o flux3dp -p swiftray Swiftray.app/Contents/MacOS/Swiftray.dSYM
 
       - name: Codesign executable
         env: 
@@ -132,6 +138,7 @@ jobs:
           security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $MACOS_KEYCHAIN_PASSWORD build.keychain
           cd build
+          /usr/bin/codesign --force --deep --verify --verbose --timestamp --options runtime --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" "Swiftray.app/Contents/MacOS/crashpad_handler"
           /usr/bin/codesign --force --deep --verify --verbose --timestamp --options runtime --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" "Swiftray.app"
 
       - name: Notarize Release Build
