Update cmake boost folder for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ if(WIN32)
     add_compile_definitions(WIN32_LEAN_AND_MEAN)
     set (LIBXML2_INCLUDE_DIR "C:/Dev/LibXml2/include/libxml2")
     set (LIBXML2_LIBRARY "C:/Dev/LibXml2/lib/libxml2.dll.a")
-    set (BOOST_ROOT "C:/Dev/boost/boost_1_70_0")
-    set (BOOST_INCLUDEDIR "C:/Dev/boost/boost_1_70_0/boost")
-    set (BOOST_LIBRARYDIR "C:/boost_1_70_0/boost-build/lib")
+    set (BOOST_ROOT "C:/Dev/boost_1_78_0")
+    set (BOOST_INCLUDEDIR "C:/Dev/boost_1_78_0/include/boost-1_78/boost")
+    set (BOOST_LIBRARYDIR "C:/Dev/boost_1_78_0/lib")
     set (OpenCV_DIR "C:/Dev/opencv_452_mingw")
 endif()
 
