--- a/.github/workflows/build-cmake-macOS-Qt-5_15_2.yml
+++ b/.github/workflows/build-cmake-macOS-Qt-5_15_2.yml
@@ -1,18 +1,20 @@
-name: build-macos-installer
+name: cmake-build-cmake-macos-installer
 on:
   push:
     tags:
       - "v*.*.*"
 jobs:
   setup-macos-build-environment:
-    runs-on: macos-10.15
+    runs-on: macos-12
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+      - name: Checkout submodules
+        run: git submodule update --init --recursive
       - name: Select XCode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '11.3'
+          xcode-version: '13.2.1'
       #- uses: actions/setup-python@v3
       #  with:
       #    python-version: '3.9'
@@ -72,38 +74,63 @@ jobs:
         run: |
           brew install opencv
       
-      - name: QMake project
+      - name: build submodules in project - sentry-native
+        run: |
+          cd third_party/sentry-native
+          cmake -B build -S . \
+            -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+            -DSENTRY_BACKEND=crashpad \
+            -DSENTRY_INTEGRATION_QT=YES \
+            -DCMAKE_PREFIX_PATH=$RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib/cmake
+          cmake --build build --config RelWithDebInfo --parallel
+          cmake --install build --prefix install
+
+      - name: CMake generate buildsystem
         run: |
           mkdir build
           cd build
-          $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/qmake ${{ github.workspace }}/swiftray.pro -spec macx-clang CONFIG+=qtquickcompiler
+          cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_PREFIX_PATH=$RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib/cmake ${{ github.workspace }}
       - name: Compile (Build) project
         run: |
           cd build
-          make qmake_all
-          make -j10
-      - run: |
-          brew install tree
+          cmake --build . --target Swiftray -- -j 6
+      - name: Install Bundle
+        run: |
+          cd build
+          cmake --install .
       - name: Deploy (Copy necessary shared libraries)
         run: |
           cd build
-          $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -verbose=2
-          tree .
+          $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/bin/macdeployqt install/Swiftray.app -qmldir=${{ github.workspace }}/src/windows/qml -verbose=2
+      - name: Fix bundle dependencies (workaround for bug in macdeployqt)
+        run: |
+            cd build
+            cp /usr/local/opt/gcc/lib/gcc/11/libgcc_s.1.1.dylib install/Swiftray.app/Contents/Frameworks/
+            chmod 644 install/Swiftray.app/Contents/Frameworks/libgcc_s.1.1.dylib
+            install_name_tool -id @executable_path/../Frameworks/libgcc_s.1.1.dylib install/Swiftray.app/Contents/Frameworks/libgcc_s.1.1.dylib
+            install_name_tool -change /usr/local/opt/gcc/lib/gcc/11/libgcc_s.1.1.dylib @executable_path/../Frameworks/libgcc_s.1.1.dylib install/Swiftray.app/Contents/Frameworks/libgcc_s.1.dylib
 
-      #- uses: actions/upload-artifact@v3
-      #  with:
-      #    name: build
-      #    path: build/ # or path/to/artifact
+      #- name: Print otool result
+      #  run: |
+      #      otool -l build/install/Swiftray.app/Contents/MacOS/Swiftray
+      #      otool -L build/install/Swiftray.app/Contents/Frameworks/libgcc_s.1.dylib
+      #      otool -L build/install/Swiftray.app/Contents/Frameworks/libgcc_s.1.1.dylib
 
-      - name: Select XCode version
-        uses: maxim-lobanov/setup-xcode@v1
+      - name: Setup Sentry CLI
+        uses: mathieu-bour/setup-sentry-cli@1.2.0
         with:
-          xcode-version: '12.4.0'
-
-      #- uses: actions/download-artifact@v3
-      #  with:
-      #    name: build
-      #- run: ls
+          version: latest # optional if 'latest'
+          token: ${{ SECRETS.SENTRY_TOKEN }} # from GitHub secrets
+          organization: flux3dp
+          project: swiftray
+      - name: Upload debug symbol to sentry
+        run: |
+          cd $RUNNER_WORKSPACE/Qt/5.15.2/clang_64/lib
+          sentry-cli upload-dif -o flux3dp -p swiftray *.dSYM
+          cd ${{ github.workspace }}
+          cd build
+          dsymutil Swiftray.app/Contents/MacOS/Swiftray
+          sentry-cli upload-dif -o flux3dp -p swiftray Swiftray.app/Contents/MacOS/Swiftray.dSYM
 
       - name: Codesign executable
         env: 
@@ -118,15 +145,16 @@ jobs:
           security unlock-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
           security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $MACOS_KEYCHAIN_PASSWORD build.keychain
-          cd build
+          cd build/install
+          /usr/bin/codesign --force --deep --verify --verbose --timestamp --options runtime --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" "Swiftray.app/Contents/MacOS/crashpad_handler"
           /usr/bin/codesign --force --deep --verify --verbose --timestamp --options runtime --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" "Swiftray.app"
-
+      
       - name: Notarize Release Build
         env: 
           ASC_PROVIDER: ${{ secrets.ASC_PROVIDER }}
         uses: erwin1/xcode-notarize@main
         with:
-          product-path: "build/Swiftray.app"
+          product-path: "build/install/Swiftray.app"
           appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
           appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
           asc-provider: ${{ secrets.ASC_PROVIDER }}
@@ -135,12 +163,12 @@ jobs:
       - name: "Staple Release Build"
         uses: devbotsxyz/xcode-staple@v1
         with:
-          product-path: "build/Swiftray.app"
+          product-path: "build/install/Swiftray.app"
 
       - name: Create dmg
         run: |
           brew install create-dmg
-          cd build
+          cd build/install
           create-dmg --volname "Swiftray Installer" \
             --volicon "Swiftray.app/Contents/Resources/icon.icns" \
             --window-pos 200 120 \
@@ -151,9 +179,9 @@ jobs:
             --app-drop-link 600 190 \
             "Swiftray-Installer.dmg" \
             "Swiftray.app/"
-                
-      - name: Create Github Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: build/Swiftray-Installer.dmg
+
+      #- name: Create Github Release
+      #  uses: softprops/action-gh-release@v1
+      #  if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    files: build/install/Swiftray-Installer.dmg
