--- a/win.rc
+++ b/win.rc
@@ -3,18 +3,18 @@ IDI_ICON1 ICON DISCARDABLE "images/icon.ico"
 
 1 VERSIONINFO
     FILEVERSION    0,0,0,0
-    PRODUCTVERSION 0,0,1,10
+    PRODUCTVERSION VERSION_MAJOR,VERSION_MINOR,VERSION_BUILD,VERSION_BETA
 {
     BLOCK "StringFileInfo"
     {
         BLOCK "000004B0"
         {
             VALUE "CompanyName",        "FLUX Inc.\0"
-            VALUE "FileDescription",    "Laser engraving software\0"
+            VALUE "FileDescription",    "Swiftray\0"
             VALUE "FileVersion",        "0.0.0.0\0"
             VALUE "OriginalFilename",   "Swiftray.exe\0"
             VALUE "ProductName",        "Swiftray\0"
-            VALUE "ProductVersion",     "1.0.0.0\0"
+            VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         }
     }
     BLOCK "VarFileInfo"
