--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 project(Swiftray VERSION 1.0.1)
+message("System Name: ${CMAKE_SYSTEM_NAME}")
 
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 0)
@@ -18,55 +19,18 @@ set(CMAKE_OSX_DEPLOYMENT_TARGET 11.0)
 # Add additional FindXXX.cmake for the project
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 #set(CMAKE_FIND_DEBUG_MODE 1)
-if(WIN32)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   add_compile_definitions(WIN32_LEAN_AND_MEAN)
   if (MSVC)
     add_compile_options(/bigobj)
-  endif(MSVC)
-endif(WIN32)
+  endif()
+endif()
 if (MINGW)
   link_libraries(ws2_32)
   message(STATUS "Link ws2_32 for resolving __imp_WSAStartup and __imp_WSACleanup undefined issue")
-endif(MINGW)
+endif()
 
 get_filename_component(SRC_DIR "src" REALPATH)
-
-# Ref: https://stackoverflow.com/questions/7046956/populating-srcs-from-cmakelists-txt-in-subdirectories
-#      https://stackoverflow.com/questions/10031953/how-to-set-the-global-variable-in-a-function-for-cmake
-set_property(GLOBAL PROPERTY source_list)
-function(add_sources)
-    get_property(tmp GLOBAL PROPERTY source_list)
-    file (RELATIVE_PATH _relPath "${PROJECT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
-    foreach (_src ${ARGN})
-        if (_relPath)
-            list (APPEND tmp "${_relPath}/${_src}")
-        else()
-            list (APPEND tmp "${_src}")
-        endif()
-    endforeach()
-    set_property(GLOBAL PROPERTY source_list "${tmp}")
-endfunction(add_sources)
-
-set(SOURCES
-  ${SRC_DIR}/globals.cpp
-  ${SRC_DIR}/layer.cpp
-  ${SRC_DIR}/document.cpp
-  ${SRC_DIR}/command.cpp
-  ${SRC_DIR}/clipboard.cpp
-  ${MOTION_CONTROLLER_JOB_CPP}
-)
-add_subdirectory(src/canvas)
-add_subdirectory(src/windows)
-add_subdirectory(src/widgets)
-add_subdirectory(src/settings)
-add_subdirectory(src/shape)
-add_subdirectory(src/parser)
-add_subdirectory(src/toolpath_exporter)
-add_subdirectory(src/connection)
-add_subdirectory(src/motion_controller_job)
-
-get_property(source_list GLOBAL PROPERTY source_list)
-list(APPEND SOURCES ${source_list})
 
 include_directories(
   third_party
@@ -74,14 +38,6 @@ include_directories(
   ${SRC_DIR}
 )
 
-if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  link_libraries("-framework AppKit")
-  set(SOURCES
-    ${SOURCES}
-    ${SRC_DIR}/windows/osxwindow.mm)
-endif ()
-
-message(STATUS "Source files: " "${SOURCES}")
 
 # Qt
 find_package(Qt5 COMPONENTS Core REQUIRED)
@@ -102,20 +58,17 @@ include_directories(
 )
 
 
-set(MAIN_SOURCE ${SOURCES})
-qt5_add_resources(MAIN_SOURCE "qml.qrc")
 # Set Bundle properties and add executable target
-if(WIN32)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   set(APP_ICON_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/win.rc")
   add_executable(${PROJECT_NAME} 
     WIN32 # Make it a GUI app instead of console app
     ${SRC_DIR}/main.cpp 
-    ${MAIN_SOURCE} 
     ${APP_ICON_WINDOWS})
   #set_target_properties(${PROJECT_NAME} PROPERTIES
   #  WIN32 TRUE # Make it a GUI app instead of console app
   #)
-elseif(APPLE)
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   set(CMAKE_MACOSX_RPATH 1)
   #set(APP_HELPER_FILES
   #  ${CMAKE_CURRENT_SOURCE_DIR}/xxxxx/<helper tools>
@@ -135,8 +88,6 @@ elseif(APPLE)
   set_source_files_properties(${APP_RESOURCE_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
   add_executable(${PROJECT_NAME} 
     ${SRC_DIR}/main.cpp 
-    ${MAIN_SOURCE}
-    #${APP_ICON_MACOSX}
     #${APP_HELPER_FILES}
     ${APP_ADDITIONAL_EXEC_FILES}
     ${APP_FRAMEWORK_FILES}
@@ -163,6 +114,32 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_BETA=${VERSION_BETA})
 target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_SUFFIX=\"${VERSION_SUFFIX}\")
 target_compile_definitions(${PROJECT_NAME} PUBLIC VER_PRODUCTVERSION_STR=\"${VER_PRODUCTVERSION_STR}\\0\")
 
+# ====================== Subdirectory sources =======================
+target_sources(Swiftray PRIVATE
+  ${SRC_DIR}/globals.cpp
+  ${SRC_DIR}/layer.cpp
+  ${SRC_DIR}/document.cpp
+  ${SRC_DIR}/command.cpp
+  ${SRC_DIR}/clipboard.cpp
+  "qml.qrc" # replaced qt5_add_resources() when CMAKE_AUTORCC is ON
+)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  target_link_libraries(Swiftray "-framework AppKit")
+  target_sources(Swiftray PRIVATE
+    ${SRC_DIR}/windows/osxwindow.mm
+  )
+endif ()
+
+add_subdirectory(src/canvas)
+add_subdirectory(src/windows)
+add_subdirectory(src/widgets)
+add_subdirectory(src/settings)
+add_subdirectory(src/shape)
+add_subdirectory(src/parser)
+add_subdirectory(src/toolpath_exporter)
+add_subdirectory(src/connection)
+add_subdirectory(src/motion_controller_job)
+
 # ====================== Subdirectory libraries =======================
 add_subdirectory(third_party/clipper)
 add_subdirectory(third_party/QxPotrace)
@@ -172,11 +149,11 @@ target_link_libraries(${PROJECT_NAME} QxPotrace)
 target_link_libraries(${PROJECT_NAME} libdxfrw)
 
 # Sentry
-if(WIN32)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   target_link_libraries(${PROJECT_NAME}
     ${CMAKE_SOURCE_DIR}/third_party/sentry-native/install/lib/sentry.lib
   )
-elseif(APPLE)
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   target_link_libraries(${PROJECT_NAME} 
     ${CMAKE_SOURCE_DIR}/third_party/sentry-native/install/lib/libsentry.dylib
   )
@@ -197,7 +174,7 @@ target_link_libraries(${PROJECT_NAME} Qt::Widgets)
 target_link_libraries(${PROJECT_NAME} Qt::SerialPort)
 
 # Boost
-if(WIN32)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   add_compile_definitions(WIN32_LEAN_AND_MEAN)
   if(MSVC)
     add_compile_options(/bigobj)
@@ -205,39 +182,39 @@ if(WIN32)
     set(BOOST_ROOT "C:/Dev/boost_1_78_0_msvc14_2")
     set(BOOST_INCLUDEDIR "C:/Dev/boost_1_78_0_msvc14_2/boost")
     set(BOOST_LIBRARYDIR "C:/Dev/boost_1_78_0_msvc14_2/lib64-msvc-14.2")
-  else(MSVC)
+  else()
     set(BOOST_ROOT "C:/Dev/boost_1_78_0")
     set(BOOST_INCLUDEDIR "C:/Dev/boost_1_78_0/include/boost-1_78/boost")
     set(BOOST_LIBRARYDIR "C:/Dev/boost_1_78_0/lib")
-  endif(MSVC)
-endif(WIN32)
+  endif()
+endif()
 find_package(Boost 1.70 REQUIRED COMPONENTS thread system)
 if(Boost_FOUND)
   message(STATUS "Found Boost")
   include_directories(${Boost_INCLUDE_DIRS})
   target_link_libraries(${PROJECT_NAME} ${BOOST_LIBRARIES}) # link the boost component libraries
   target_link_libraries(${PROJECT_NAME} Boost::thread Boost::system) # link the boost component libraries
-  if(WIN32)
+  if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     if(MSVC)
       # Fix incorrect linking for msvc with boost
       target_link_libraries(${PROJECT_NAME} Boost::disable_autolinking)
-    endif(MSVC)
-  endif(WIN32)
-else(Boost_FOUND)
+    endif()
+  endif()
+else()
   message(FATAL_ERROR "Couldn't find boost")
-endif(Boost_FOUND)
+endif()
 
 # LibXml2
-if(WIN32)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   if(MSVC) 
     set(ICONV_INCLUDE_DIR "C:/Dev/libraries/libconv/include")
     set(LIBXML2_LIBRARY "C:/Dev/libraries/libxml2/lib/libxml2.dll.a")
     set(LIBXML2_INCLUDE_DIR "C:/Dev/libraries/libxml2/include/libxml2")
-  else(MSVC)
+  else()
     set(LIBXML2_INCLUDE_DIR "C:/Dev/LibXml2/include/libxml2")
     set(LIBXML2_LIBRARY "C:/Dev/LibXml2/lib/libxml2.dll.a")
-  endif(MSVC)
-endif(WIN32)
+  endif()
+endif()
 find_package(LibXml2 REQUIRED)
 if(LibXml2_FOUND)
   message(STATUS "Found LibXml2")
@@ -248,17 +225,17 @@ if(LibXml2_FOUND)
   )
   target_link_libraries(${PROJECT_NAME} ${LIBXML2_LIBRARIES})
   target_link_libraries(${PROJECT_NAME} LibXml2::LibXml2)
-else(LibXml2_FOUND)
+else()
   message(FATAL_ERROR "Couldn't find LibXml2")
-endif(LibXml2_FOUND)
+endif()
 
 # OpenCV
-if(WIN32)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   if(MSVC) 
     set(OpenCV_DIR "C:/Dev/opencv_454_msvc/build")
-  else(MSVC)
+  else()
     set(OpenCV_DIR "C:/Dev/opencv_452_mingw")
-  endif(MSVC)
+  endif()
 endif()
 find_package(OpenCV REQUIRED)
 include_directories(
@@ -282,11 +259,11 @@ include_directories(
 #add_subdirectory(tests)
 
 # ====================== install =======================
-#if(WIN32)
+#if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 #  install(TARGETS ${PROJECT_NAME}
 #    RUNTIME DESTINATION ${CMAKE_BINARY_DIR}/install
 #  )
-#elseif(APPLE)
+#elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 #  install(TARGETS ${PROJECT_NAME}
 #    BUNDLE DESTINATION ${CMAKE_BINARY_DIR}/install
 #    )
