Rename gcode player to gcode panel

--- a/src/windows/CMakeLists.txt
+++ b/src/windows/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(Swiftray PRIVATE
   mainwindow.cpp
-  gcode-player.cpp
+  gcode-panel.cpp
   about-window.cpp
   image-crop-dialog.cpp
   image-sharpen-dialog.cpp
