--- a/src/motion_controller/CMakeLists.txt
+++ b/src/motion_controller/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_sources(
-  motion-controller.cpp
-  grbl-motion-controller.cpp
+target_sources(Swiftray PRIVATE
+  motion_controller.cpp
+  motion_controller_factory.cpp
+  grbl_motion_controller.cpp
 )
