Fix pdf2svg dependencies: poppler, cairo, glib for macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,10 +189,10 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   )
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   target_include_directories(${PROJECT_NAME} PRIVATE
-    /usr/local/opt/cairo/include
+    /usr/local/opt/cairo/include/cairo
   )
   target_link_libraries(${PROJECT_NAME} 
-    /usr/local/opt/cairo/lib/libcairo.a
+    /usr/local/opt/cairo/lib/libcairo.dylib
   )
 else()
   # TODO: Linux
@@ -211,10 +211,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   target_include_directories(${PROJECT_NAME} PRIVATE
     /usr/local/opt/glib/include/glib-2.0
+    /usr/local/opt/glib/lib/glib-2.0/include
   )
   target_link_libraries(${PROJECT_NAME} 
-    /usr/local/opt/glib/lib/libglib-2.0.a
-    /usr/local/opt/glib/lib/libgobject-2.0.a
+    /usr/local/opt/glib/lib/libglib-2.0.dylib
+    /usr/local/opt/glib/lib/libgobject-2.0.dylib
   )
 else()
   # TODO: Linux
@@ -233,7 +234,7 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     /usr/local/opt/poppler/include/poppler/glib
   )
   target_link_libraries(${PROJECT_NAME} 
-    /usr/local/opt/poppler/lib/libpoppler-glib.a
+    /usr/local/opt/poppler/lib/libpoppler-glib.dylib
   )
 else()
   # TODO: Linux
